--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="logoMenu clearfix">
       <div class="logo">
-        <img/ src="../images/logo.png">
+        <img/ src="img/logo.png">
       </div>
         <!--<div class="hudai">সেন্ট জোসেফস্ উচ্চ বিদ্যালয়, খুলনা</div>-->
       <div class="menu">
@@ -49,8 +49,8 @@
     <div class="content clearfix">
       <div class="leftcontent">
         <h2 class="contenthead">My Self</h2> 
-        <div class="myimg"><img/ src="samiul.jpg">
-          <p>Samiul</p>
+        <div class="myimg"><img/ src="img/samiul.jpg">
+          <p>Samiul</p> 
         </div>
         <div class="myself">
           <p><u>Name:</u> Samiul Alam</p>
